tests/ui/rustdoc/cfg-rustdoc.stderr
error[E0425]: cannot find value `Foo` in this scope
  --> $DIR/cfg-rustdoc.rs:5:13
   |
LL |     let f = Foo;
   |             ^^^ not found in this scope
   |
note: found an item that was configured out
  --> $DIR/cfg-rustdoc.rs:2:12
   |
LL | pub struct Foo;
   |            ^^^
note: the item is gated here
  --> $DIR/cfg-rustdoc.rs:1:7
   |
LL | #[cfg(doc)]
   |       ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
